...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign.SignupActivity">


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_backgroundcolor"
        android:orientation="vertical">

        <RelativeLayout
...
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fg_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
...
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/et_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:background="@android:color/transparent"
...
                                android:minWidth="320dp"
                                android:minHeight="45dp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/button_signin"
                        style="@style/Button1"
                        android:layout_width="342dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="@string/button_sign_up" />
...
