...
    <string name="Color">Color:</string>
    <string name="Size">Size:</string>
    <string name="Quantity">Quantity:</string>
    <string name="Add">Add</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="button_sign_in">Sign in</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="text_sign_in_message">Please sign in to account</string>
    <string name="text_password">Input your email to find the password</string>
    <string name="button_sign_up">Sign up</string>
    <string name="hint_confirm_password">Confirm Password</string>
...
    <string name="OrderDate">Order Date:</string>
    <string name="Total_amount">Total Amount:</string>
    <string name="Order_id">Order ID:</string>
    <string name="Setting">Setting</string>
    <string name="login">login</string>
    <string name="product">Product</string>
    <string name="button_Confirm">Confirm</string>

    <string-array name="item">
        <item>All</item>
        <item>Men</item>
        <item>Women</item>
        <item>Kid</item>
...
